--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0" />
+  <title>Hangman Game</title>
+
   <link rel="apple-touch-icon"
         sizes="180x180"
         href="/favicon/apple-touch-icon.png">
@@ -16,7 +18,19 @@
         type="image/png"
         sizes="16x16"
         href="/favicon/favicon-16x16.png">
-  <title>Hangman Game</title>
+        
+  <link rel="preload" href="images/hg-0.png" as="image">
+  <link rel="preload" href="images/hg-1.png" as="image">
+  <link rel="preload" href="images/hg-2.png" as="image">
+  <link rel="preload" href="images/hg-3.png" as="image">
+  <link rel="preload" href="images/hg-4.png" as="image">
+  <link rel="preload" href="images/hg-5.png" as="image">
+  <link rel="preload" href="images/hg-6.png" as="image">
+  <link rel="preload" href="images/hg-7.png" as="image">
+  <link rel="preload" href="images/hg-8.png" as="image">
+  <link rel="preload" href="images/hg-9.png" as="image">
+  <link rel="preload" href="images/hg-10.png" as="image">
+  <link rel="preload" href="images/hg-win.png" as="image">
 </head>
 
 <body>
